Add short desc to link and update rake import task

--- a/app/views/links/_form.html.haml
+++ b/app/views/links/_form.html.haml
@@ -4,6 +4,7 @@
   .form-inputs
     = f.input :name
     = f.input :url
+    = f.input :short_description
 
   .form-actions
     = f.button :submit
