--- a/app/views/links/show.html.haml
+++ b/app/views/links/show.html.haml
@@ -6,7 +6,9 @@
 %p
   %b Url:
   = link.url
-
+%p
+  %b Short desc:
+  = link.short_description
 = link_to 'Edit', edit_link_path(link)
 \|
 = link_to 'Back', links_path
