links import to sidekiq worker, add creating query and automated links

--- a/app/views/links/index.html.haml
+++ b/app/views/links/index.html.haml
@@ -8,9 +8,11 @@
     %th
     %th
     %th
+    %th
 
   - links.each do |link|
     %tr
+      %td= link.updated_at
       %td= link.name
       %td= link.url
       %td= link.short_description
