UX update and small styling

--- a/app/views/queries/index.html.haml
+++ b/app/views/queries/index.html.haml
@@ -1,7 +1,7 @@
 %h1 My queries
 
 - if current_user.queries.to_a.present?
-  %table
+  %table.table.table-bordered
     %tr
       %th Name
       %th
