--- a/app/views/queries/_form.html.haml
+++ b/app/views/queries/_form.html.haml
@@ -4,5 +4,8 @@
   .form-inputs
     = f.input :name
 
+  .form-inputs
+    = f.input :refresh_time, as: :integer, label: 'Refresh interval time (in minutes)'
+
   .form-actions
     = f.button :submit
