--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,17 @@
  *= require_tree .
  *= require_self
  */
+body {
+  background-color:#3E3E3D;
+}
+.container {
+  background-color: #FFF;
+}
+#content {
+  margin: 50px 0;
+  min-height:500px;
+}
+
 
 /*flash*/
 .alert-error {
