--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -27,3 +27,10 @@
 //
 // Example:
 // @link-color: #ff0000;
+
+@navbar-default-bg: #e25d33;
+@navbar-default-link-color: #fff;
+
+@btn-info-bg: #e25d33;
+@btn-default-bg: #3E3E3D;
+@btn-default-color: #fff;
