--- a/app/views/links/_index.html.haml
+++ b/app/views/links/_index.html.haml
@@ -3,13 +3,13 @@
 %table.table.table
   %tr
     %th Name
-    %th Short desc
     %th Last update
     %th Visit
+    %th SEO Position
 
   - collection.each do |link|
     %tr
       %td= link.name
-      %td= link.short_description
       %td= link.updated_at.strftime("%H:%M %Y-%m-%d")
-      %td= link_to "#{link.url}", link.url
+      %td= link_to "Visit &#8599;".html_safe, link.url, class: 'btn btn-default btn-sm', target: "_blank"
+      %td
