--- a/app/views/queries/_form.html.haml
+++ b/app/views/queries/_form.html.haml
@@ -2,7 +2,7 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :name
+    = f.input :name, required: :true
 
   .form-inputs
     = f.input :refresh_time, as: :integer, label: 'Refresh interval time (in minutes)'
