--- a/app/views/queries/_form.html.haml
+++ b/app/views/queries/_form.html.haml
@@ -5,7 +5,7 @@
     = f.input :name, required: :true
 
   .form-inputs
-    = f.input :refresh_time, as: :integer, label: 'Refresh interval time (in minutes)'
+    = f.input :refresh_time, as: :integer, label: 'Refresh interval time (in minutes)', input_html: { value: '15' }
 
   .form-actions
     = f.button :submit
