--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -30,6 +30,7 @@
 
 @navbar-default-bg: #e25d33;
 @navbar-default-link-color: #fff;
+@navbar-default-link-hover-color: #3E3E3D;
 
 @btn-info-bg: #e25d33;
 @btn-default-bg: #3E3E3D;
