--- a/app/views/queries/new.html.haml
+++ b/app/views/queries/new.html.haml
@@ -2,4 +2,5 @@
 
 = render 'form', query: query
 
-= link_to 'Back', queries_path
+%p
+= link_to '&#8678; Back'.html_safe, queries_path, class: 'btn btn-info btn-sm'
