--- a/app/views/queries/show.html.haml
+++ b/app/views/queries/show.html.haml
@@ -1,4 +1,4 @@
-= link_to '&#10094; Back'.html_safe, queries_path, class: 'btn btn-info'
+= link_to '&#8678; Back'.html_safe, queries_path, class: 'btn btn-info btn-sm'
 
 %h1 Query Name: #{query.name}
 
