--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,7 +24,7 @@ body {
   min-height:500px;
 }
 .form-control {
-  width: 240px;
+  width: 280px;
 }
 
 /*flash*/
@@ -43,15 +43,15 @@ body {
 }
 
 .alert-success {
-   background-color: #dff0d8;
+   background-color: #e1572b;
    border-color: #d6e9c6;
-   color: #468847;
+   color: #fff;
    text-align: left;
 }
 
 .alert-notice {
-   background-color: #dff0d8;
-   border-color: #d6e9c6;
-   color: #468847;
-   text-align: left;
+  background-color: #e1572b;
+  border-color: #d6e9c6;
+  color: #fff;
+  text-align: left;
 }
