--- a/app/views/queries/edit.html.haml
+++ b/app/views/queries/edit.html.haml
@@ -1,7 +1,6 @@
 %h1 Editing query
 
 = render 'form'
-
-= link_to 'Show', query
-\|
-= link_to 'Back', queries_path
+%p 
+= link_to '&#8678; Back'.html_safe, queries_path, class: 'btn btn-info btn-sm'
+= link_to 'Show &#8680;'.html_safe, query, class: 'btn btn-warning btn-sm'
