refresh_time bug fix

--- a/app/views/queries/index.html.haml
+++ b/app/views/queries/index.html.haml
@@ -21,7 +21,7 @@
   %h1 Welcome!
   Features in this app:
   %ul
-    %li Collecting google serach results based on query provided by user
+    %li Collecting google search results based on query provided by user
     %li Checking specific link SEO position
     %li Checking if link goes up or down on serach results list
     %li Configurable interval-check time
